@@ -31,7 +31,7 @@
 #include <qapplication.h>
 #include <qslider.h>
 #include <qlayout.h>
-#include <qtooltip.h>
+#include <qwhatsthis.h>
 #include <qtimer.h>
 #include <qmetaobject.h>
 
@@ -601,10 +601,10 @@ KMPlayerPrefSourcePageDVD::KMPlayerPrefSourcePageDVD (QWidget * parent)
  : QFrame(parent) {
     QVBoxLayout *layout = new QVBoxLayout (this, 5, 2);
     autoPlayDVD = new QCheckBox (i18n ("Auto play after opening DVD"), this, 0);
-    QToolTip::add(autoPlayDVD, i18n ("Start playing DVD right after opening DVD"));
+    QWhatsThis::add(autoPlayDVD, i18n ("Start playing DVD right after opening DVD"));
     QLabel *dvdDevicePathLabel = new QLabel (i18n("DVD device:"), this, 0);
     dvddevice = new KURLRequester ("/dev/dvd", this, 0);
-    QToolTip::add(dvddevice, i18n ("Path to your DVD device, you must have read rights to this device"));
+    QWhatsThis::add(dvddevice, i18n ("Path to your DVD device, you must have read rights to this device"));
     layout->addWidget (autoPlayDVD);
     layout->addItem (new QSpacerItem (0, 10, QSizePolicy::Minimum, QSizePolicy::Minimum));
     layout->addWidget (dvdDevicePathLabel);
@@ -878,10 +878,10 @@ KMPlayerPrefSourcePageVCD::KMPlayerPrefSourcePageVCD (QWidget * parent)
  : QFrame (parent) {
      QVBoxLayout *layout = new QVBoxLayout (this, 5, 2);
      autoPlayVCD = new QCheckBox (i18n ("Auto play after opening a VCD"), this, 0);
-     QToolTip::add(autoPlayVCD, i18n ("Start playing VCD right after opening VCD"));
+     QWhatsThis::add(autoPlayVCD, i18n ("Start playing VCD right after opening VCD"));
      QLabel *vcdDevicePathLabel = new QLabel (i18n ("VCD (CDROM) device:"), this, 0);
      vcddevice= new KURLRequester ("/dev/cdrom", this, 0);
-     QToolTip::add(vcddevice, i18n ("Path to your CDROM/DVD device, you must have read rights to this device"));
+     QWhatsThis::add(vcddevice, i18n ("Path to your CDROM/DVD device, you must have read rights to this device"));
      layout->addWidget (autoPlayVCD);
      layout->addItem (new QSpacerItem (0, 10, QSizePolicy::Minimum, QSizePolicy::Minimum));
      layout->addWidget (vcdDevicePathLabel);
