@@ -1,4 +1,5 @@
 Changes since version 0.8.3-rc2
+- All QtoolTips to QWhatsThis and help from Xine for whatsthis by xine options
 - Store xine settings in ~/.kde/share/apps/kmplayer/xine_config and not in
   ~/.xine/config2. Save the first time if file does not exist (Automaticly
   sets the misc.memcpy_method).
